--- a/DSIOfficial/app/src/main/res/layout/activity_post_notification.xml
+++ b/DSIOfficial/app/src/main/res/layout/activity_post_notification.xml
@@ -115,15 +115,32 @@
                 android:id="@+id/fileChosenTextView"
                 />
 
-            <ImageButton
-                android:id="@+id/attachButton"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Attach"
-                android:src="@drawable/ic_attach_file"
+                android:paddingLeft="135dp"
                 >
 
+                <ImageButton
+                    android:id="@+id/attachButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Attach"
+                    android:src="@drawable/ic_attach_file"
+                    >
                 </ImageButton>
+
+                <ImageButton
+                    android:id="@+id/cameraButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Attach"
+                    android:src="@drawable/ic_action_name"
+
+                    >
+                </ImageButton>
+
+            </LinearLayout>
         </LinearLayout>
 
         <TextView
