--- a/DSIOfficial/app/src/main/res/layout/activity_login.xml
+++ b/DSIOfficial/app/src/main/res/layout/activity_login.xml
@@ -129,7 +129,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_weight="0.74"
-            android:src="@drawable/dsce_hub_logo" />
+            android:src="@drawable/hub_logo" />
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
