--- a/DSIOfficial/app/src/main/res/layout/activity_my_profile.xml
+++ b/DSIOfficial/app/src/main/res/layout/activity_my_profile.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.amit.dsiofficial.MyProfileActivity"
     android:orientation="vertical"
+
     >
 
     <LinearLayout
@@ -104,6 +104,34 @@
             android:text="1234567 "
             android:textSize="12dp"
             android:id="@+id/myprofile_phone"
+            android:paddingLeft="17dp"
+            android:textColor="#000"
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="14dp"
+        >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:letterSpacing="0.2"
+            android:text="Year: "
+            android:textSize="15dp"
+            android:paddingLeft="17dp"
+            android:textColor="#000"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:letterSpacing="0.2"
+            android:text="1234567 "
+            android:textSize="12dp"
+            android:id="@+id/myprofile_year"
             android:paddingLeft="17dp"
             android:textColor="#000"
             />
