--- a/DSIOfficial/app/src/main/res/menu/top_navigation.xml
+++ b/DSIOfficial/app/src/main/res/menu/top_navigation.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-    >
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/top_navigation_profile"
@@ -11,6 +9,11 @@
     <item
         android:id="@+id/top_navigation_settings"
         android:title="Settings"
+        android:letterSpacing="0.3"/>
+
+    <item
+        android:id="@+id/top_navigation_about"
+        android:title="About App"
         android:letterSpacing="0.3"/>
 
     <item
