--- a/DSIOfficial/app/src/main/res/values/dimens.xml
+++ b/DSIOfficial/app/src/main/res/values/dimens.xml
@@ -3,7 +3,11 @@
     <dimen name="activity_vertical_margin">10dp</dimen>
     <dimen name="activity_horizontal_margin">10dp</dimen>
     <dimen name="design_fab_size_mini" tools:override="true">50dp</dimen>
-    <dimen tools:override="true" name="design_fab_image_size">60dp</dimen>
+    <dimen name="design_fab_image_size" tools:override="true">60dp</dimen>
     <dimen name="design_bottom_navigation_height" tools:override="true">50dp</dimen>
     <dimen name="design_bottom_navigation_margin" tools:override="true">5dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="appbar_padding_top">8dp</dimen>
+    <dimen name="app_bar_height">180dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 </resources>
