--- a/DSIOfficial/app/src/main/res/layout/activity_login.xml
+++ b/DSIOfficial/app/src/main/res/layout/activity_login.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/gradient_bakground"
     android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
     >
     <LinearLayout
@@ -10,7 +10,9 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:paddingLeft="60dp"
-        android:paddingRight="60dp">
+        android:paddingRight="60dp"
+        android:id="@+id/login_layout"
+        >
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -130,27 +132,25 @@
             android:layout_gravity="center"
             android:layout_weight="0.74"
             android:src="@drawable/hub_logo" />
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingRight="20dp"
-            android:paddingTop="30dp"
-            >
+            android:paddingTop="30dp">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Dayananda Sagar"
-                android:textSize="24dp"
-                />
+                android:textSize="24dp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="17dp"
                 android:text="College of Engineering"
-                />
+                android:textSize="17dp" />
 
         </LinearLayout>
 
