--- a/DSIOfficial/app/src/main/res/layout/fragment_notification.xml
+++ b/DSIOfficial/app/src/main/res/layout/fragment_notification.xml
@@ -11,6 +11,7 @@
         android:layout_height="match_parent"
         tools:context="com.example.amit.dsiofficial.NotificationFragment"
         android:orientation="vertical"
+        android:id="@+id/new_notif_linear_layout"
         >
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyclerView"
